# env-foundations

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/env_foundations/: hello.py
tests/: test_sanity.py
